<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/landing_page_bg">

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="#502216"
        android:fontFamily="@font/aileron_heavy"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        android:text="@string/greeting"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="300dp"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting"
        android:src="@drawable/app_logo"
        android:layout_marginTop="50dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/about_developers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meet_developers"
        app:layout_constraintTop_toBottomOf="@id/app_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="openAboutDevelopers"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:fontFamily="@font/aileron_heavy"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_spelling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_spelling"
        app:layout_constraintTop_toBottomOf="@id/about_developers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="openModeSelection"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:fontFamily="@font/aileron_heavy"/>

</androidx.constraintlayout.widget.ConstraintLayout>